--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gift For You 🎁</title>
+  <title>Special Gift For You by Spark 🎁</title>
   <meta name="title" content="Gift For You by Spark 🎁" />
   <link rel="icon" type="image/png" href="src/g.png" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
